--- a/backend/package.json
+++ b/backend/package.json
@@ -23,9 +23,11 @@
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.5",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "eslint": "^8.29.0",
