--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-mesto-gha",
+  "name": "react-mesto-api-full",
   "version": "1.0.0",
   "description": "[![Tests](../../actions/workflows/tests-13-sprint.yml/badge.svg)](../../actions/workflows/tests-13-sprint.yml) [![Tests](../../actions/workflows/tests-14-sprint.yml/badge.svg)](../../actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
   "main": "app.js",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/maksps/express-mesto-gha.git"
+    "url": "git+https://github.com/maksps/react-mesto-api-full.git"
   },
   "author": "Maksimov Pavel",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/maksps/express-mesto-gha/issues"
+    "url": "https://github.com/maksps/react-mesto-api-full/issues"
   },
-  "homepage": "https://github.com/maksps/express-mesto-gha#readme",
+  "homepage": "https://github.com/maksps/react-mesto-api-full#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "celebrate": "^15.0.1",
