--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-mesto-api-full",
+  "name": "express-mesto-gha",
   "version": "1.0.0",
   "description": "[![Tests](../../actions/workflows/tests-13-sprint.yml/badge.svg)](../../actions/workflows/tests-13-sprint.yml) [![Tests](../../actions/workflows/tests-14-sprint.yml/badge.svg)](../../actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
   "main": "app.js",
@@ -10,19 +10,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/maksps/react-mesto-api-full.git"
+    "url": "git+https://github.com/maksps/express-mesto-gha.git"
   },
   "author": "Maksimov Pavel",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/maksps/react-mesto-api-full/issues"
+    "url": "https://github.com/maksps/express-mesto-gha/issues"
   },
-  "homepage": "https://github.com/maksps/react-mesto-api-full#readme",
+  "homepage": "https://github.com/maksps/express-mesto-gha#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
